--- a/src/css/contact.css
+++ b/src/css/contact.css
@@ -106,7 +106,7 @@ flex-direction: column;
     padding: 10px;
     border: 1px solid #928e8e;
     border-radius: 5px;
-    background-color: rgb(239, 156, 3);
+    background-color: rgba(244, 160, 5, 0.616);
     align-items: center;
 }
 
@@ -114,14 +114,15 @@ flex-direction: column;
 /* Este es el boton de Enviar */
 .contact-form button {
 padding: .5rem;
-border-radius: .5rem;
+border-radius: 30px;
 color: white;
-background-color: hsl(34, 91%, 49%);
+background-color: #FAB64B;
 font-size: 15px;
 transition: 1s;
 width: 30%;
 align-items: start;
 justify-content: start;
+margin-bottom: 50px;
 }
 
 .contact-form button:hover{
