--- a/src/css/home-page.css
+++ b/src/css/home-page.css
@@ -105,7 +105,6 @@ section h2{
     --white: white;
     --chocolate: rgba(86, 66, 66, 1);
   }
-  
   header{
     display: flex;
     justify-content: center;
@@ -115,7 +114,7 @@ section h2{
     width: 100%;
     height: 100vh;
   }
-  
+ 
   .desk_mode {
     display: none;
   }
@@ -174,6 +173,9 @@ section h2{
     color: var(--orange);
     text-decoration: none;
   }
+  header.mobile_mode nav menu {
+    width: 100vw;
+  }
   
   @media (min-width: 550px) and (max-width: 800px) {
     header.mobile_mode nav menu {
@@ -217,7 +219,6 @@ section h2{
       flex-direction: column;
       align-items: center;
       width: 100%;
-      margin: 2rem;
       padding-right: 7rem;
     }
     .desk_mode nav h2{
